# csvpsql

./: Cargo.toml  README.md  example.csv
src/: lib.rs  main.rs
